# keming365NewVue

./: .gitignore  DEPLOY.md  DEPLOY_CHECKLIST.md  Dockerfile  VUE_SPA_MIGRATION.md  create_admin.py  docker-compose.yml  fix_admin2.py  fix_admin3.py  manage.py  nginx.conf  pyproject.toml  test_login.py
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py
apps/admin_panel/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py
apps/assessment/: batch_score.py  export_excel.py  models.py  pushlet.py  services.py  show_ppt.py  urls.py  utils.py  views.py
apps/comments/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py
apps/common/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py
apps/courses/: __init__.py  admin.py  models.py  serializers.py  (+3 more)
config/: __init__.py  asgi.py  urls.py  wsgi.py
frontend/: MIGRATION_CHANGES.md  index.html  package-lock.json  package.json  vite.config.ts
media/: about.html  admin.html  api_test.html  course-detail.html  courses.html  create_admin.html  experiment.html  files.html  index.html  lesson.html  login.html  news-detail.html  news.html  platform.html  profile.html  register.html  review-report.html  student-reports.html  teacher-reports.html  video.html
requirements/: base.txt  dev.txt
scripts/: __init__.py  generate_models_from_pojo.py  reset_root_password.sql  run_inspectdb.py  test_db.py
utils/: __init__.py  auth_backend.py  exceptions.py  file_convert.py  jwt_auth.py  pagination.py  permissions.py  sms.py
(+116 files in other folders)
